Moved base z-index to higher value to avoid collisions with existing scripts.

--- a/css/modalHome.css
+++ b/css/modalHome.css
@@ -4,7 +4,7 @@
     width: 100%;
     background: #000;
     background: rgba(0,0,0,.8);
-    z-index: 100;
+    z-index: 1000;
     display: none;
     top: 0;
     left: 0; 
@@ -19,7 +19,7 @@
     width: 660px;
     background: #fff;
     position: absolute;
-    z-index: 101;
+    z-index: 1001;
     padding: 30px 40px 34px;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
